<?xml version="1.0"?>
<package>
  <name>control_panel_plugins</name>
  <version>0.4.99</version>
  <description>The control_panel_plugins package</description>

  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>

  <license>BSD</license>

  <url type="website">http://csc.mcs.sdsmt.edu/</url>

  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend version_gte="0.5.0">control_panel</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joy_to_twist</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>libqt4</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend version_gte="0.5.0">control_panel</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joy_to_twist</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <control_panel plugin="${prefix}/control_panel_plugins.xml" />
  </export>
</package>
